--- a/params.yaml
+++ b/params.yaml
@@ -1,17 +1,16 @@
 train:
-  batch_size: &BATCH_SIZE 256
+  batch_size: &BATCH_SIZE 512
   device: &DEVICE 'cuda'
-  max_epochs: 1000
+  max_epochs: 100
 
 # There is some overlap between Dataset and DataLoader parameters
 # they are all grouped here with explanations.
 data:
-  # Spectrogram parameters
-  n_fft: 400
-  hop_length: 160
-  n_mels: 23
+  # Spectrogram parameters.
+  mfcc:
+    n_mfcc: 13
   img_size: &IMG_SIZE 64
-  mean: 0.5 # This is better than no normalisation. # Could compute for the dataset and use that value here.
+  mean: 0.5 # This is better than no normalisation.
   std: 0.5
 
   # DataLoader parameters
@@ -19,12 +18,13 @@ data:
   batch_size: *BATCH_SIZE
   num_workers: 4
   pin_memory: True
-  global_min: 0
-  global_max: 4096
+  prefetch_factor: 8
+  # Stats for the training dataset, used to scale 0 - 1.
+  global_min: -1818
+  global_max: 618
 
 model:
-  resnet_variant: 'resnet50'
-  n_classes: 35 # TODO :Get this from the dataset
+  resnet_variant: 'resnext50'
   dropout: 0.4
   unfreeze_layers: -1
   img_size: *IMG_SIZE
@@ -32,4 +32,4 @@ model:
     sgd:
       momentum: 0.9
       weight_decay: 0.0001
-      lr: 0.01
+      lr: 0.1 # Usually have lower LR, but here 0.1 works well for this problem.
